<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">roku</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_back">Back</string>
    <string name="button_home">Home</string>
    <string name="button_up">Up</string>
    <string name="button_left">Left</string>
    <string name="button_select">Select</string>
    <string name="button_right">Right</string>
    <string name="button_down">Down</string>
    <string name="button_reverse">Reverse</string>
    <string name="button_play">Play/Pause</string>
    <string name="button_forward">Forward</string>
    <string name="button_info">info</string>
    <string name="title_activity_display_press_ack">DisplayPressAckActivity</string>
    <string name="title_activity_lab">LabActivity</string>

</resources>
