<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="1" >

    <Button
        android:id="@+id/back_btn_id"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:onClick="goBack"
        android:text="@string/button_back" />

    <Space
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0" />

    <Button
        android:id="@+id/home_btn_id"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="0"
        android:onClick="goHome"
        android:text="@string/button_home" />

    <Space
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1" />

    <Button
        android:id="@+id/up_btn_id"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:onClick="goUp"
        android:text="@string/button_up" />

    <Space
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="1" />

    <Button
        android:id="@+id/left_btn_id"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:onClick="goLeft"
        android:text="@string/button_left" />

    <Button
        android:id="@+id/select_btn_id"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:onClick="goSelect"
        android:text="@string/button_select" />

    <Button
        android:id="@+id/right_btn_id"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="2"
        android:onClick="goRight"
        android:text="@string/button_right" />

    <Space
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3" />

    <Button
        android:id="@+id/down_btn_id"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:onClick="goDown"
        android:text="@string/button_down" />

    <Space
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="3" />

    <Button
        android:id="@+id/reverse_btn_id"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:onClick="goReverse"
        android:text="@string/button_reverse" />

    <Button
        android:id="@+id/play_btn_id"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:onClick="goPlay"
        android:text="@string/button_play" />

    <Button
        android:id="@+id/forward_btn_id"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="4"
        android:onClick="goForward"
        android:text="@string/button_forward" />

    <Space
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5" />

    <Button
        android:id="@+id/info_btn_id"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="5"
        android:onClick="goInfo"
        android:text="@string/button_info" />

    <Space
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="5" />

</GridLayout>